Fixed grades not visible on Firefox

--- a/packages/web/src/features/leaderboards/components/charts/leaderboard.scss
+++ b/packages/web/src/features/leaderboards/components/charts/leaderboard.scss
@@ -181,9 +181,6 @@
                   display: flex;
                   align-items: center;
                   justify-content: center;
-                  img {
-                    height: 1rem;
-                  }
                 }
               }
               &.date {
